Release of version 3.0
Look at the README file for details